# BotWhatsapp

./: README.md  clientes.xlsx  pyproject.toml
src/: app.py
